with fake onsets

--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -129,9 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -149,11 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello data in the path Grace is cool\n"
+     ]
+    }
+   ],
    "source": [
     "main()#call main to execute all our globals then run our prepro function"
    ]
@@ -302,14 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#try running this \n",
@@ -333,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -371,13 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10189/func/sub-10189_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10193/func/sub-10193_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10206/func/sub-10206_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10225/func/sub-10225_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10227/func/sub-10227_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10228/func/sub-10228_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10235/func/sub-10235_task-bart_bold.nii.gz']\n"
+     ]
+    }
+   ],
    "source": [
-    "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
+    "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*_task-bart_bold.nii.gz')\n",
     "print(input[0:10])"
    ]
   },
@@ -395,22 +413,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/gracer/Desktop/data/sub-10292/func/sub-10292_task-bart_bold.nii.gz'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input[-1]"
    ]
@@ -428,24 +464,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my path is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz\n",
+      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold.nii.gz']\n",
+      "sub-10159\n"
+     ]
+    }
+   ],
    "source": [
-    "#x=input[1]\n",
-    "#print('my path is '+x)\n",
-    "#y=x.split('/')\n",
-    "#print (y)\n",
+    "x=input[0]\n",
+    "print('my path is '+x)\n",
+    "y=x.split('/')\n",
+    "print (y)\n",
+    "sub=y[5]\n",
     "#whatcomp=y[2]\n",
     "#sub=y[5]\n",
     "#print sub\n",
     "\n",
-    "sub=input[1].split('/')[5]\n",
+    "#sub=input[1].split('/')[5]\n",
     "print(sub)"
    ]
   },
@@ -458,11 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10171\n"
+     ]
+    }
+   ],
    "source": [
     "sub=input[1].split('/')[5]\n",
     "print(sub)"
@@ -481,11 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10171_task-bart_bold\n"
+     ]
+    }
+   ],
    "source": [
     "subtask=input[1].split('/')[7].split('.')[0]\n",
     "#subtask=subtask.strip('.nii.gz')\n",
@@ -494,11 +552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10171_task-bart_bold_brain\n"
+     ]
+    }
+   ],
    "source": [
     "output=subtask+'_brain'\n",
     "print(output)"
@@ -517,14 +581,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-c263dd53731b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "os.system('bet' x output '-F')"
    ]
@@ -543,12 +615,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#os.system('bet' x output '-F')\n",
     "#print(x)\n",
@@ -622,19 +704,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gracer/Desktop/data/sub-*/func/sub-*bart*.nii.gz\n",
+      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10189/func/sub-10189_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10189/func/sub-10189_task-bart_bold_brain.nii.gz']\n"
+     ]
+    }
+   ],
    "source": [
     "#input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
     "basedir='/Users/gracer/Desktop/data'\n",
-    "path=os.path.join(basedir,'sub-*','func','sub-*.nii.gz')\n",
-    "#print(path)\n",
-    "#input=glob.glob(path)\n",
-    "#len(input[1:5])\n",
-    "os.path.exists(basedir)"
+    "path=os.path.join(basedir,'sub-*','func','sub-*bart*.nii.gz')\n",
+    "print(path)\n",
+    "input=glob.glob(path)\n",
+    "len(input[1:5])\n",
+    "print(input[0:10])\n",
+    "#os.path.exists(basedir)"
    ]
   },
   {
@@ -651,21 +741,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-38-0c52d7a5ff15>(2)prepro()\n",
+      "-> for item in glob.glob(os.path.join(basedir,'sub-*','func','sub-*_task-bart_bold.nii.gz')):\n",
+      "(Pdb) item\n",
+      "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz'\n",
+      "(Pdb) output\n",
+      "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain'\n"
+     ]
+    }
+   ],
    "source": [
     "def prepro(basedir):\n",
-    "    for item in glob.glob(os.path.join(basedir,'sub-*','func','sub-*.nii.gz')):\n",
+    "    for item in glob.glob(os.path.join(basedir,'sub-*','func','sub-*_task-bart_bold.nii.gz')):\n",
     "        input=item\n",
-    "        output_path=item.strip('.nii.gz')\n",
+    "        output_path=item.split('.')[0]\n",
     "        output=output_path+('_brain')\n",
     "        os.system(\"/usr/local/fsl/bin/bet %s %s -F\"%(input, output))\n",
     "        pdb.set_trace()\n",
     "def main():\n",
     "    basedir='/Users/gracer/Desktop/data'\n",
-    "    prepro(basedir)"
+    "    prepro(basedir)\n",
+    "main()"
    ]
   },
   {
