new working bet script

--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -131,6 +131,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -315,18 +316,21 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Hi!\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "#try running this \n",
     "\n",
-    "print(os.system('echo $FSLDIR'))\n",
+    "subprocess.check_output(['echo', 'Hi!'])\n",
     "\n",
     "\n",
     "#now look at the terminal you launched your jupyter notebook from\n"
@@ -383,14 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10171/func/sub-10171_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10189/func/sub-10189_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10193/func/sub-10193_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10206/func/sub-10206_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10225/func/sub-10225_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10227/func/sub-10227_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10228/func/sub-10228_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10235/func/sub-10235_task-bart_bold.nii.gz']\n"
+      "['/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10225/func/sub-10225_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10227/func/sub-10227_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10228/func/sub-10228_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10235/func/sub-10235_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10249/func/sub-10249_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10269/func/sub-10269_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10271/func/sub-10271_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10273/func/sub-10273_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10274/func/sub-10274_task-bart_bold.nii.gz']\n"
      ]
     }
    ],
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -475,9 +479,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my path is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz\n",
-      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold.nii.gz']\n",
-      "sub-10159\n"
+      "my path is /Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz\n",
+      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10217', 'func', 'sub-10217_task-bart_bold.nii.gz']\n",
+      "sub-10217\n"
      ]
     }
    ],
@@ -533,14 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sub-10171_task-bart_bold\n"
+      "sub-10225_task-bart_bold\n"
      ]
     }
    ],
@@ -552,14 +556,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sub-10171_task-bart_bold_brain\n"
+      "sub-10225_task-bart_bold_brain\n"
      ]
     }
    ],
@@ -581,7 +585,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -589,16 +610,40 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-c263dd53731b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.system('bet' x output '-F')"
+    "import subprocess\n",
+    "subprocess.call(['bet', '/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold.nii.gz','/Users/gracer/Desktop/data/sub-10217/func/sub-10217_task-bart_bold_brain.nii.gz','-F'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "subprocess.call(['bet', '%s'%(x),'%s'%(output),'-F'])"
    ]
   },
   {
