--- a/feat_scripts/Feat_Level2.ipynb
+++ b/feat_scripts/Feat_Level2.ipynb
@@ -313,6 +313,86 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "#import pdb\n",
+    "\n",
+    "\n",
+    "repl_dict={}\n",
+    "basedir='/Users/gracer/Desktop/data'\n",
+    "indir=os.path.join(basedir,'derivatives','task')\n",
+    "    \n",
+    "for dir in glob.glob(os.path.join(indir,'sub-*','grace_edit')):\n",
+    "    feats=glob.glob(os.path.join(dir,'%s*.feat'%(<NAMEOFTHEDIR>)))\n",
+    "    repl_dict.update({'SECOND':feats[1]})\n",
+    "    repl_dict.update({'FUNCRUN':feats[0]})\n",
+    "    sub=dir.split('/')[7]\n",
+    "    repl_dict.update({'SUB':sub})\n",
+    "    output=os.path.join(dir,'%s.gfeat'%(<NAMEOFTHEFOLDER>))\n",
+    "    repl_dict.update({'OUTPUT':output})\n",
+    "    print(repl_dict)\n",
+    "    with open(os.path.join(basedir,'design2.fsf'),'r') as infile:\n",
+    "        tempfsf=infile.read()\n",
+    "        for key in repl_dict:\n",
+    "            tempfsf = tempfsf.replace(key, repl_dict[key])\n",
+    "            with open(os.path.join(dir,'%s_second.fsf'%(<NAMEOFFILE>),'w') as outfile:\n",
+    "                outfile.write(tempfsf)\n",
+    "            outfile.close()\n",
+    "        infile.close()      \n",
+    "\n",
+    "\n",
+    "os.chdir('/Users/gracer/Google Drive/fMRI_workshop/scripts/feat_scripts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python2\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Created on Wed Nov 29 16:11:03 2017\n",
+    "\n",
+    "@author: gracer\n",
+    "\"\"\"\n",
+    "import os\n",
+    "import glob\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
+    "\n",
+    "basedir='/Users/gracer/Desktop/data/derivatives/task'\n",
+    "all_data=glob.glob(os.path.join(basedir,'sub*','sub*bart.fsf'))\n",
+    "def split_list(a_list):\n",
+    "        half = len(a_list)/2\n",
+    "        return a_list[:half], a_list[half:]\n",
+    "\n",
+    "B, C = split_list(all_data)\n",
+    "\n",
+    "def run_level1(DATA):\n",
+    "    for item in DATA:\n",
+    "        print('starting to run on %s'%item)\n",
+    "        os.system(\"feat %s\"%item)    \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "   pool = Pool(processes=2)\n",
+    "   pool.map(run_level2, [B,C])\n",
+    "   pool.close()\n",
+    "   pool.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
@@ -327,7 +407,7 @@
     "import argparse\n",
     "#import pdb\n",
     "\n",
-    "def create_fsf2(basedir,repl_dict, indir,arglist):\n",
+    "def create_fsf2(basedir,repl_dict,indir,arglist):\n",
     "    if arglist['TASK']==False:\n",
     "        print(\"please say which task to run on\")\n",
     "    else:\n",
